--- a/app/homepage/page.module.css
+++ b/app/homepage/page.module.css
@@ -78,24 +78,29 @@
 
 .developercard {
   justify-content: space-between;
-  margin: 0px;
-  margin-top: 100px;
-  margin-bottom: 100px;
   display: flex;
   flex-wrap: wrap;
 }
 
 .card {
+  margin-top: 100px;
+  margin-bottom: 100px;
+  line-height: 90px;
   padding: 40px;
   font-weight: 900;
-  font-size: 60px;
-  width: 500px;
+  font-size: 50px;
+  width: 430px;
   height: 800px;
   color: #20323b !important;
   background-color: rgb(255, 255, 255) !important;
   border-radius: 50px;
   transition: letter-spacing 1s ease;
   border-color: rgba(240, 248, 255, 0) !important;
+}
+
+.iconsskill {
+  filter: brightness(0) invert(1) grayscale(100%) contrast(100%);
+  margin: 20px;
 }
 
 /* DESIGNER */
@@ -128,10 +133,11 @@
 }
 
 .cardtwo {
+  line-height: 90px;
   padding: 40px;
   font-weight: 900;
-  font-size: 60px;
-  width: 500px;
+  font-size: 50px;
+  width: 430px;
   height: 800px;
   color: rgb(255, 255, 255) !important;
   background-color: #20323b !important;
@@ -145,6 +151,7 @@
   border-radius: 10px;
   padding: 2px;
   box-shadow: 0 0 20px #20323b5d;
+  margin: 20px;
 }
 
 .container {
@@ -233,4 +240,254 @@
   background-color: #f3f3f3 !important;
   border-width: 5px;
   color: #20323b !important;
+}
+
+@media (max-width: 768px) {
+  .hero {
+    background-color: #ffffff;
+    line-height: 40px;
+    padding-top: 110px !important;
+    padding-bottom: 0px !important;
+  }
+
+  .fixed {
+    z-index: -100;
+    position: fixed;
+    top: 0;
+    height: 100vh;
+    width: 100%;
+    background-color: #ffffff;
+    line-height: 170px;
+  }
+
+  .fixedHead {
+    font-size: 60px;
+    font-weight: 900;
+    color: #ebebeb;
+  }
+
+  /* hero */
+
+  .heroHead {
+    font-size: 45px;
+    font-weight: 900;
+    color: #20323b !important;
+  }
+
+  .heroTwo {
+    background-color: #ffffff;
+    padding-bottom: 180px !important;
+  }
+
+  .heroTwoPara {
+    font-size: 15px;
+    line-height: 30px;
+    color: #545958 !important;
+    width: 350px;
+  }
+
+  .resumeButton {
+    margin-top: 70px;
+    margin-left: 20px;
+    width: 200px;
+    height: 70px;
+    border-radius: 50px !important;
+    font-size: 17px;
+    font-weight: 600;
+    border-style: none;
+    background-color: #f3f3f3 !important;
+    border-width: 5px;
+    color: #20323b !important;
+  }
+
+  /* DEVELOPER */
+
+  .developer {
+    background-color: #20323b;
+  }
+
+  .developerhero {
+    background-color: #d6cc9900;
+    margin-top: 50px;
+    margin-bottom: 50px;
+  }
+
+  .developerhead {
+    font-size: 50px;
+    color: rgb(255, 255, 255) !important;
+    font-weight: 900;
+    width: 40vh;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .developercard {
+    justify-content: center;
+    margin: 0px;
+    margin-top: 50px;
+    margin-bottom: 100px;
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .card {
+    margin-top: 50px;
+    margin-bottom: 50px;
+    line-height: 80px;
+    padding: 40px;
+    font-weight: 900;
+    font-size: 30px;
+    width: 300px;
+    height: 500px;
+    color: #20323b !important;
+    background-color: rgb(255, 255, 255) !important;
+    border-radius: 30px;
+    transition: letter-spacing 1s ease;
+    border-color: rgba(240, 248, 255, 0) !important;
+  }
+
+  .iconsskill {
+    filter: brightness(0) invert(1) grayscale(100%) contrast(100%);
+    margin: 20px;
+  }
+
+  /* DESIGNER */
+
+  .designer {
+    background-color: #d6d6d614;
+    backdrop-filter: blur(5px);
+  }
+
+  .designerhero {
+    background-color: #d6cc9900;
+    margin-top: 100px;
+    margin-bottom: 100px;
+  }
+
+  .designerhead {
+    font-size: 50px;
+    color: #20323b !important;
+    font-weight: 900;
+    width: 50vh;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .designercard {
+    justify-content: space-around;
+    margin: 5px;
+    margin-top: 100px;
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .cardtwo {
+    margin-bottom: 50px;
+    line-height: 80px;
+    padding: 40px;
+    font-weight: 900;
+    font-size: 30px;
+    width: 300px;
+    height: 500px;
+    color: rgb(255, 255, 255) !important;
+    background-color: #20323b !important;
+    border-radius: 30px;
+    transition: letter-spacing 1s ease;
+    border-color: rgba(240, 248, 255, 0) !important;
+  }
+
+  .icon {
+    background-color: #ffffff;
+    border-radius: 10px;
+    padding: 2px;
+    box-shadow: 0 0 20px #20323b5d;
+  }
+
+  .container {
+    justify-content: space-around;
+    padding-top: 900px;
+    display: flex;
+    flex-wrap: wrap;
+    padding-left: 30px;
+    padding-right: 30px;
+    background-color: transparent;
+  }
+
+  .cardshow {
+    margin-bottom: 80px;
+    padding: 10px;
+    width: 800px;
+    height: 450px;
+    background-color: rgba(255, 255, 255, 0.336);
+    border-radius: 30px;
+    border: 4px solid #ffffff;
+    backdrop-filter: blur(10px);
+    box-shadow: 0 0 50px rgba(0, 0, 0, 0.137);
+  }
+
+  .cardimage {
+    border-radius: 20px;
+  }
+
+  .cardtext {
+    margin-left: 10px;
+    margin-top: 20px !important;
+    font-weight: 600;
+    color: #292929;
+    font-size: 15px;
+  }
+
+  .buttonback {
+    font-size: 15px;
+    border-radius: 50px;
+    margin-bottom: 70px;
+    margin-top: 40px;
+    box-shadow: 0 0 50px rgba(0, 0, 0, 0.137) !important;
+    background-color: #ffffff !important;
+    border-style: none;
+  }
+
+  /* Foot */
+
+  .back {
+    background-color: #000000 !important;
+    line-height: 300px !important;
+    padding-top: 20px;
+    padding-bottom: 50px;
+    padding-left: 20px;
+  }
+
+  .scroll {
+    color: #131313;
+    font-size: 300px;
+    font-weight: 900;
+    width: 100%;
+  }
+
+  .in {
+    padding: 20px;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    background-color: #20323b;
+  }
+
+  .intotext {
+    color: #ffffff;
+    font-size: 15px;
+    text-align: center;
+  }
+
+  .footButton {
+    margin-top: 70px;
+    margin-left: 20px;
+    width: 300px;
+    height: 60px;
+    border-radius: 50px !important;
+    font-size: 18px;
+    font-weight: 600;
+    border-style: none;
+    background-color: #f3f3f3 !important;
+    border-width: 5px;
+    color: #20323b !important;
+  }
 }
