--- a/app/homepage/page.module.css
+++ b/app/homepage/page.module.css
@@ -254,7 +254,7 @@
     position: fixed;
     top: 0;
     height: 100vh;
-    width: 100%;
+    /* width: 100%; */
     background-color: #ffffff;
     line-height: 170px;
   }
@@ -471,7 +471,7 @@
 
   .intotext {
     color: #ffffff;
-    font-size: 15px;
+    font-size: 20px;
     text-align: center;
   }
 
