--- a/app/homepage/page.module.css
+++ b/app/homepage/page.module.css
@@ -428,8 +428,8 @@
   }
 
   .cardtext {
-    margin-left: 10px;
-    margin-top: 20px !important;
+  text-align: justify;
+  margin: 20px !important;
     font-weight: 600;
     color: #292929;
     font-size: 15px;
